src/views/ChooseBond/choose-bond.scss
#choose-bond-view {
  padding: 0px 80px 20px 80px;

  .bond-paper {
    background-color: unset;
  }
  .bond-card-header {
    margin-bottom: 20px;

    .bond-title {
      font-weight: 600;
      font-size: 24px;
      margin-bottom: 20px;

      .bond-title-icon {
        vertical-align: middle;
      }
    }
  }

  .bond-hero-section {
    margin-bottom: 30px;

    .bond-hero-card {
      padding: 20px;
      border-radius: 10px;

      .bond-hero-title {
        font-size: 16px;
        font-weight: 700;
      }

      .bond-hero-value {
        font-size: 24px;
        font-weight: 800;
      }
    }
  }

  .bond-row-container {
    .bond-title-row {
      padding: 0px 32px;
      .bond-row-title {
        text-align: right;
        font-size: 16px;
        font-weight: 700;
        padding: 10px;

        &.first-col {
          text-align: left;
        }
      }
    }

    .bond-row {
      border-radius: 10px;
      padding: 30px;
      margin-bottom: 20px;
      border: 2px solid #ffffff;
      transition: 0.3s;
      &:hover {
        border: 2px solid #ccd4e0;
        box-shadow: 0px 4px 20px 0px #e9f0f3;
        cursor: pointer;
      }

      .bond-row-value {
        text-align: right;
        padding: 0px 10px;
        &.first-col {
          text-align: left;
        }
      }

      .bond-price-text {
        margin-bottom: 4px;
      }
    }
  }

  // common css
  .bond-name-label {
    margin-top: 4px;
  }

  .currency-icon {
    margin-right: 4px;
    vertical-align: middle;
  }
}

@media screen and (max-width: 1400px) {
  #choose-bond-view {
    padding: 0px 30px 20px 30px;
  }
}

@media screen and (max-width: 960px) {
  #choose-bond-view {
    padding: 0px 20px 20px 20px;

    .bond-hero-section {
      margin-bottom: 10px;

      .bond-hero-card {
        padding: 10px 20px;

        .bond-hero-title {
          font-size: 14px;
          text-align: center;
        }

        .bond-hero-value {
          font-size: 20px;
          text-align: center;
        }
      }
    }

    .bond-card-container {
      font-size: 14px;

      .bond-card {
        border-radius: 10px;
        padding: 20px;
        margin-bottom: 20px;

        .bond-avatar-row {
          margin-bottom: 20px;
        }

        .bond-card-value {
          text-align: right;
        }

        .vesting-time-text {
          font-weight: 400;
          margin-top: -12px;
        }
      }
    }
  }
}

